<resources>
    <string name="app_name">PSMU Project</string>
    <string name="login_btn_text">Log In</string>
    <string name="pass">Password</string>
    <string name="user">Username</string>
    <string name="create_post">Create Post</string>
    <string name="read_post">Read Post</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="tags">Tags</string>
    <string name="likes">150</string>
    <string name="dislikes">250</string>
    <string name="profile_picture">Profile picture</string>
    <string name="log_out">Log out</string>
    <string name="comments">Comments</string>
    <string name="edit">Edit</string>
    <string name="icon">icon</string>
    <string name="delete">Delete</string>
    <string name="add_photo">Add photo</string>
    <string name="add_tag">Add Tag</string>
    <string name="create">Create</string>
    <string name="like_icon">Like icon</string>
    <string name="dislike_icon">Dislike icon</string>
    <string name="add_picture">Add picture</string>
    <string name="chose_tags">Chose tags:</string>
    <string name="add_comment">Add comment</string>
    <string name="comment">Comment</string>
</resources>
