<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imgPostPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_picture" />

    <TextView
        android:id="@+id/tvPostTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"/>
    <TextView
        android:id="@+id/tvPostDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"/>
    <TextView
        android:id="@+id/tvPostAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"/>
    <TextView
        android:id="@+id/tvPostDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"/>
    <TextView
        android:id="@+id/tvPostLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"/>
    <TextView
        android:id="@+id/tvPostTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tags"/>
    <LinearLayout
        android:id="@+id/postComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvPostLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likes"/>
        <TextView
            android:id="@+id/tvPostDislikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dislikes"/>
    </LinearLayout>
</LinearLayout>