<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jovan.sf62_2017.LoginActivity">

   <EditText
       android:id="@+id/etUsername"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/user"/>

   <EditText
       android:id="@+id/etPassword"
       android:inputType="textPassword"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/pass"/>

   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/btnLogIn"
       android:text="@string/login_btn_text"/>

</android.support.constraint.ConstraintLayout>
