<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_background">
    <TextView
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_comment"/>
    <EditText
        android:textColor="@color/white"
        android:layout_marginStart="5dp"
        android:hint="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="10"
        android:id="@+id/etCommentTitle"/>
    <EditText
        android:textColor="@color/white"
        android:layout_marginStart="5dp"
        android:hint="@string/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="10"
        android:id="@+id/etComment"/>
    <Button
        android:id="@+id/btnAddComment"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_comment"/>
    <ListView
        android:id="@+id/commentsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:background="@color/dark_background" />
</LinearLayout>