<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_width="280dp"
    android:id="@+id/drawerPane"
    android:layout_gravity="start"
    android:clickable="true"
    android:focusable="true">

        <LinearLayout
            android:id="@+id/profileBox"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="120dp"
            android:background="@color/colorPrimary"
            android:padding="8dp" >
            <ImageView
                android:id="@+id/image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profile_default_icon"
                android:contentDescription="@string/profile_picture"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/etUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"/>
                <Button
                    android:id="@+id/btnLogOut"
                    android:layout_width="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="5dp"
                    android:background="@color/dark_background"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"/>
            </LinearLayout>
        </LinearLayout>
        <ListView
            android:id="@+id/navList"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:background="@color/dark_background" />
    </LinearLayout>